# dropboxclone-koren

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
DropBox_Mptt/: asgi.py  settings.py  urls.py  wsgi.py
authentication/: forms.py  urls.py  views.py
dropbox_file/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
dropbox_file/migrations/: 0001_initial.py  0002_auto_20200715_1320.py  0003_auto_20200715_1528.py
dropbox_user/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
dropbox_user/migrations/: 0001_initial.py
static/css/: 404.css  file.css  filelist.css  general_form.css  landingpage.css  navbar.css
templates/: 404.html  500.html  base.html  file.html  filelist.html  general_form.html  index.html  landingpage.html  userpage.html
